# planieren

./: CMakeLists.txt  main.cpp
libplanieren/: PlanierenStorage.cpp  PlanierenStorage.h
